디밍그룹 조회추가, UI 수정

--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -16,10 +16,15 @@
     <!-- dayjs -->
     <script type="text/javascript" src="/webjars/dayjs/1.10.7/dayjs.min.js" ></script>
 
+    <!-- datatable.css-->
+    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/datatables.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/select/select.dataTables.css">
+
     <!-- datatable.js-->
-    <link rel="stylesheet" type="text/css" href="/webjars/datatables/1.10.19/css/jquery.dataTables.min.css">
-    <script type="text/javascript" src="/webjars/datatables/1.10.19/js/jquery.dataTables.min.js" ></script>
-    <script type="text/javascript" src="/js/plugin/dataTable-ellipsis/dataTable-ellipsis.js" ></script>
+    <script type="text/javascript" src="/js/plugin/dataTable/datatables.min.js" ></script>
+    <script type="text/javascript" src="/js/plugin/dataTable/ellipsis/dataTable-ellipsis.js" ></script>
+    <script type="text/javascript" src="/js/plugin/dataTable/select/dataTables.select.min.js" ></script>
+
     <!-- datetimepicker -->
     <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
     <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
