--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -53,8 +53,8 @@
 .accordion_sub_menu li a:before{position: absolute; top: 20px; left: 24px; content: ''; width: 12px; height: 12px; margin: 0px; box-sizing: border-box; background: url(../images/default/settingMenuTree.svg);}
 .accordion_sub_menu li > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 /* Functionality */
-.accordion li > .accordion_sub_menu{height: 0; overflow: hidden; -webkit-transition: height .2s ease-in-out; -moz-transition: height .2s ease-in-out; -o-transition: height .2s ease-in-out; -ms-transition: height .2s ease-in-out; transition: height .2s ease-in-out;}
-.accordion li.on > .accordion_sub_menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
+.accordion li > .accordion_sub_menu{max-height: 0; overflow: hidden; -webkit-transition: max-height 500ms ease-in-out; -moz-transition: max-height 500ms ease-in-out; -o-transition: max-height 500ms ease-in-out; -ms-transition: max-height 500ms ease-in-out; transition: max-height 500ms ease-in-out;}
+.accordion li.on > .accordion_sub_menu{max-height: 500px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
 .accordion_sub_menu li a:hover,
 .accordion_sub_menu li a:active,
 .accordion_sub_menu li a:target,
@@ -165,6 +165,9 @@
 .search_table .table_bottom .page_nav li.next:hover{filter: brightness(1.75);}
 .search_table .table_bottom .button{float: right; display: flex; align-items: center; grid-gap: 6px; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
 .search_table .table_bottom .button:hover{color: #dee0e4;}
+
+/* table selected*/
+tr.selected td {background-color: #23252b;}
 
 /* table scroll head fix */
 .search_table .dataTables_wrapper .table_body {overflow: hidden;}
@@ -358,7 +361,7 @@
 /* signage */
 .signage_contents{display: flex; grid-gap: 14px; height: 100%;}
 .signage_contents > article{overflow: hidden; padding: 0px;}
-.article_title{overflow: hidden; height: 60px; margin: 0px; padding: 0px 12px 0px 20px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
+.article_title{overflow: hidden; height: 60px; margin: 0px; padding: 0px 12px 0px 20px; box-sizing: border-box;}
 .signage_template{display: flex; flex-direction: column; width: 320px;}
 .signage_template .template_list{flex: 1; overflow: auto;}
 .signage_template .template_list dl{padding: 15px; border-bottom: 1px solid #292c34;}
