--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -6,7 +6,7 @@
             <li th:if="${municipality == '41210000'}" id="one" class="multi">
                 <a href="#one">스마트 가로등</a>
                 <ul class="accordion_sub_menu">
-                    <li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>
+                    <!--<li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>-->
                     <li id="dimmingSet"><a href="/pages/config/dimmingSet">디밍 설정</a></li>
                 </ul>
             </li>
@@ -23,7 +23,7 @@
             <li id="notice">
                 <a href="/pages/config/notice">공지사항</a>
             </li>
-            <li id="">
+            <li id="signage">
                 <a href="/pages/config/signage">사이니지 템플릿</a>
             </li>
         </th:block>
