디밍설정 그룹별 시설물 맵 추가중

--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -414,3 +414,6 @@ tr.selected td {background-color: #23252b;}
         opacity: 0;
     }
 }
+
+/* map */
+.map_wrap{position:relative; flex:1; height:100%; background:#0c0c0d;}
