--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
@@ -52,7 +52,7 @@
                 </article>
             </div>
             <!-- 지도 영역 -->
-            <div class="map"></div>
+            <div id="dimmMap" class="map_wrap"></div>
             <!-- //지도 영역 -->
         </div>
         <article class="search_list dimming_set">
@@ -178,7 +178,7 @@
             </div>
         </article>
         <!-- 디밍 그룹 설정 팝업  -->
-        <div class="popup" id="dimmingGroupPopup">
+        <div class="popup" id="dimmingGroupPopup" style="display:none;">
             <dl class="title">
                 <dt>디밍 그룹 추가</dt>
                 <dd><i><img src="/images/default/close.svg"></i></dd>
