--- a/danusys-platform/src/main/resources/templates/layout/layout_config.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_config.html
@@ -3,6 +3,8 @@
 <head>
     <th:block th:insert="fragments/default/default" />
     <link rel="stylesheet" type="text/css" href="/css/board.css">
+    <script type="text/javascript" src="/js/map/controlMap.js"></script>
+    <th:block th:insert="view/commons/map"/>
 </head>
 <body>
 <div class="wrap">
