--- a/danusys-smartMetering/src/main/resources/templates/admin/loginForm_.html
+++ b/danusys-smartMetering/src/main/resources/templates/admin/loginForm_.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/singleLayout">
+      layout:decorate="~{layout/singleLayout}">
 
 <th:block layout:fragment="content">
 
