--- a/danusys-smartMetering/src/main/resources/templates/fragments/error.html
+++ b/danusys-smartMetering/src/main/resources/templates/fragments/error.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/singleLayout">
+      layout:decorate="~{layout/singleLayout}">
 
 <th:block layout:fragment="content">
 
