--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -329,8 +329,14 @@ tr.selected td {background-color: #23252b;}
 .popup div.list_search .list_table.table_authorize tbody tr td:nth-child(1){border-right: 2px solid #292c34;}
 .popup div.list_search .list_table table tbody td span input[type="radio"] + label,
 .popup div.list_search .list_table table tbody td span input[type="radio"] + label span{margin: 0px; padding: 0px;}
-.popup div.list_search .list_table .dataTables_scrollHead{display: table;}
+.popup div.list_search .list_table .dataTables_scrollHead{display: table; flex: initial;}
 .popup div.list_search .list_table .dataTables_scrollBody{border-bottom: none;}
+.popup div.popup_dimming_group{display: flex; flex-direction: row; border-bottom: 2px solid #292c34; grid-gap: 20px; padding: 20px 30px;}
+.popup div.popup_dimming_group div.list_search{margin: 0; padding: 0; border: none;}
+.popup div.popup_dimming_group .map_area{min-height: 460px; margin: 0; padding: 0; background: darkseagreen;}
+.popup div.popup_dimming_group dl{position: relative; display: flex; flex-direction: column; grid-gap: 14px; margin: 0px 0px 20px;}
+.popup div.popup_dimming_group dl dt{display: flex; align-items: center; font-size: 16px;}
+.popup div.popup_dimming_group dl dt::before{content: ''; width: 4px; height: 4px; margin: 0px 8px 0px 0px; background: #434751;}
 
 /* statistics */
 .statistics{display: flex; height: calc(100% - 60px);}
